Closed Bug 1490033 Opened 6 years ago Closed 6 years ago

Bad performance on https://www.netlify.com/docs/

Categories

(Core :: Graphics: WebRender, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla64
Tracking Status
firefox64 --- fixed

People

(Reporter: mstange, Assigned: jrmuizel)

References

Details

Attachments

(2 files)

https://www.netlify.com/docs/ has a wavy animation at the top which uses SVG, and it makes rendering of the whole page really slow.
P1 so we can understand how common this is, how bad it is relative to non-WR, and the rough LOE.
Priority: -- → P1
Assignee: nobody → jmuizelaar
Attached file Reduced test case
This test case is uploading 113 MB of texture data. That's probably too high.
The problem here is caused by a changing residual offset. I have a patch that fixes it.
This catches all animations instead of those that only run on the compositor.
Comment on attachment 9011135 [details] Bug 1490033. Use IsStyleMaybeAnimated to set up snapping surface transform Markus Stange [:mstange] has approved the revision.
Attachment #9011135 - Flags: review+
Pushed by jmuizelaar@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/3685d3c45f2d Use IsStyleMaybeAnimated to set up snapping surface transform. r=mstange
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: