Bug 1490033. Use IsStyleMaybeAnimated to set up snapping surface transform. r=mstange

This catches all animations instead of those that only run on the compositor.

Differential Revision: https://phabricator.services.mozilla.com/D6543