gfx/layers/wr/StackingContextHelper.cpp
@@ -36,12 +36,12 @@ StackingContextHelper::StackingContextHelper(const StackingContextHelper& aParen
                                              bool aIsPreserve3D,
                                              const Maybe<nsDisplayTransform*>& aDeferredTransformItem,
                                              const wr::WrClipId* aClipNodeId,
-                                             bool aRasterizeLocally)
+                                             bool aAnimated)
   : mBuilder(&aBuilder)
   , mScale(1.0f, 1.0f)
   , mDeferredTransformItem(aDeferredTransformItem)
   , mIsPreserve3D(aIsPreserve3D)
-  , mRasterizeLocally(aRasterizeLocally || aParentSC.mRasterizeLocally)
+  , mRasterizeLocally(aAnimated || aParentSC.mRasterizeLocally)
 {
   // Compute scale for fallback rendering. We don't try to guess a scale for 3d
   // transformed items
@@ -51,7 +51,7 @@ StackingContextHelper::StackingContextHelper(const StackingContextHelper& aParen
       && !aParentSC.mIsPreserve3D) {
     mInheritedTransform = transform2d * aParentSC.mInheritedTransform;
     mScale = mInheritedTransform.ScaleFactors(true);
-    if (aAnimation) {
+    if (aAnimated) {
       mSnappingSurfaceTransform = gfx::Matrix::Scaling(mScale.width, mScale.height);
     } else {
       mSnappingSurfaceTransform = transform2d * aParentSC.mSnappingSurfaceTransform;
